--- a/web/styles.css
+++ b/web/styles.css
@@ -1,14 +1,70 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background: radial-gradient(#666,#333);
 }
 
-#output {
-  padding: 20px;
-  text-align: center;
+main {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
+
+input-overlay {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+input-overlay.active {
+  pointer-events: all;
+  background: radial-gradient(#666,#333);
+  opacity: 0.2;
+}
+
+header {
+  position: absolute;
+  display: block;
+  top: 5px;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  color: #cccccc;
+  font-size: 40px;
+  line-height: 40px;
+}
+
+aus-house {
+  position: absolute;
+  display: grid;
+  background-color: rgba(0,0,0,0.55);
+  transition: transform 0.5s;
+  will-change: transform;
+  width: 500px;
+  height: 500px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+aus-character {
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: #fff;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
