--- a/web/styles.css
+++ b/web/styles.css
@@ -7,12 +7,12 @@ html, body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   background: radial-gradient(#666,#333);
+  overflow: hidden;
 }
 
 main {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 input-overlay {
@@ -45,7 +45,7 @@ header {
 
 aus-house {
   position: absolute;
-  display: grid;
+  display: block;
   background-color: rgba(0,0,0,0.55);
   transition: transform 0.5s;
   will-change: transform;
@@ -53,18 +53,28 @@ aus-house {
   height: 500px;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50px, -50px);
 }
 
-aus-character {
+aus-actor {
   position: absolute;
   display: block;
   width: 40px;
   height: 40px;
-  border-radius: 100%;
-  background-color: #fff;
-  left: 50%;
-  top: 50%;
   transform: translate(-50%, -50%);
+  left: 0;
+  top: 0;
 }
 
+aus-actor#character {
+  border-radius: 100%;
+  background-color: #fff;
+}
+
+aus-actor#character.active {
+  background-color: #0f0;
+}
+
+.hidden {
+  display: none;
+}
