Integrated movement, collision detection wip

--- a/web/styles.css
+++ b/web/styles.css
@@ -65,9 +65,10 @@ header {
   height: 50px;
   left: 0;
   top: 0;
+  transform: translate(-50%, -50%);
 }
 
-.actor#character {
+.actor#Character {
   border-radius: 100%;
   transition: background-color 0.2s;
   background-color: #fff;
@@ -75,7 +76,7 @@ header {
   top: 50%;
 }
 
-.actor#character.active {
+.actor#Character.active {
   background-color: rgba(0,255,0,0.5);
 }
 
