Actor position, rendering and scaling fixed. Collisions almost fixed.

--- a/web/styles.css
+++ b/web/styles.css
@@ -105,6 +105,7 @@ nav > button:hover, nav > button:focus {
   left: 0;
   top: 0;
   transform: translate(-50%, -50%);
+  transform-origin: 50% 50%;
 }
 
 .actor#Character {
