--- a/web/styles.css
+++ b/web/styles.css
@@ -139,7 +139,11 @@ nav > button:hover, nav > button:focus {
 }
 
 .actor#Character.active {
-  background-color: rgba(0,255,0,0.5);
+  background-color: rgba(0,255,0, 1.0);
+}
+
+.actor.door {
+  background-color: rgba(255,255,0, 1.0);
 }
 
 .hidden {
