--- a/web/styles.css
+++ b/web/styles.css
@@ -146,6 +146,10 @@ nav > button:hover, nav > button:focus {
   background-color: rgba(255,255,0, 1.0);
 }
 
+.actor.circle {
+  border-radius: 100%;
+}
+
 .hidden {
   display: none;
 }
