--- a/web/styles.css
+++ b/web/styles.css
@@ -1,11 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
 
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Press Start 2P', regular;
   background: radial-gradient(rgb(143, 84, 17),rgb(180, 39, 29));
   overflow: hidden;
 }
@@ -14,7 +14,7 @@ main {
   display: block;
   width: 100%;
   height: 100%;
-  transition: background-color ease-in 2s;
+  transition: background-color ease-in 2s; 
   background-color: #000000;
 }
 
@@ -47,7 +47,7 @@ main.active {
 header {
   position: absolute;
   display: block;
-  top: 5px;
+  top: 25%;
   width: 100%;
   height: auto;
   text-align: center;
@@ -55,6 +55,7 @@ header {
   color: #cccccc;
   font-size: 40px;
   line-height: 40px;
+  transform: translate(0%, -100%);
 }
 
 nav {
@@ -72,6 +73,7 @@ nav {
 
 nav > button {
   box-sizing: border-box;
+  font-family: 'Press Start 2P', regular;
   font-size: 30px;
   line-height: 30px;
   color: #cccccc;
