--- a/web/styles.css
+++ b/web/styles.css
@@ -38,10 +38,29 @@ main.active {
 
 #inputLayer{
   pointer-events: none;
+  z-index: 100;
 }
 #inputLayer.active {
-  opacity: 0;
   pointer-events: all;
+}
+
+#inputKnob {
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 50px;
+  left: 0;
+  top: 0;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border-radius: 100%;
+  transition: opacity 0.2s;
+  opacity: 0;
+  background: radial-gradient( rgba(255, 255, 255, 0.2), rgba(100, 100, 100, 0.5) );
+  border: solid 1px rgba(255, 255, 255, 0.2);
+}
+#inputKnob.active {
+  opacity: 0.8;
 }
 
 header {
@@ -107,6 +126,7 @@ nav > button:hover, nav > button:focus {
   line-height: 40px;
   opacity: 0;
   transition: opacity ease 0.3s;
+  pointer-events: none;
 }
 
 #bigLabel.active {
