--- a/web/styles.css
+++ b/web/styles.css
@@ -193,21 +193,25 @@ nav > button.active > .checkbox > i {
 
 #stats {
   position: fixed;
+  display: flex;
   left: 5px;
   top: 5px;
   pointer-events: none;
+  flex-direction: column-reverse;
 }
 
 #stats > #lives {
-  text-align: center;
   color: #ff3333;
   font-size: 40px;
   line-height: 40px;
   text-shadow: 1px 1px 5px #333333;
 }
-
 #stats > #lives > i {
   margin: 5px;
+}
+#stats > #enemyCount {
+  font-size: 20px;
+  line-height: 20px;
 }
 
 .actor {
