--- a/web/styles.css
+++ b/web/styles.css
@@ -176,6 +176,7 @@ nav > button.active > .checkbox > i {
   left: 50%;
   top: 50%;
 }
+/*
 #world::before {
   position: absolute;
   content: "";
@@ -186,6 +187,7 @@ nav > button.active > .checkbox > i {
   height: 20%;
   background-color: rgba(0,0,0, 0.7);
 }
+*/
 
 #world.changing {
   will-change: transform;
@@ -240,7 +242,11 @@ nav > button.active > .checkbox > i {
 
 .actor.tree {
   background: url('./assets/img/plants/plant_repack.png') -5px -10px;
-  background-size: calc(100% * 7) calc(100% * 3)
+  background-size: 700% 280%
+}
+.actor.tree.shrub {
+  background-position: -30px -372px;
+  background-size: 700% 460%
 }
 
 .actor.door {
@@ -248,14 +254,18 @@ nav > button.active > .checkbox > i {
 }
 .actor.door::before {
   position: absolute;
-  content: "";
+  content: "EXIT";
+  text-align: center;
+  box-align: border-box;
+  padding-top: 2px;
   display: block;
-  left: 0;
+  left: -3px;
   top: -500%;
   width: 100%;
   height: 550%;
   background-color: rgba(255,255,100, 1.0);
   transition: transform ease-out 0.25s, background-color 0.25s;
+  border: solid 3px rgba(0,0,0,1);
 }
 .actor.door.active::before {
   transform: scale(1.5);
