--- a/web/styles.css
+++ b/web/styles.css
@@ -177,7 +177,7 @@ nav > button.active > .checkbox > i {
   left: 50%;
   top: 50%;
 }
-/*
+
 #world::before {
   position: absolute;
   content: "";
@@ -188,7 +188,7 @@ nav > button.active > .checkbox > i {
   height: 20%;
   background-color: rgba(0,0,0, 0.7);
 }
-*/
+
 
 #world.changing {
   will-change: transform;
@@ -238,12 +238,8 @@ nav > button.active > .checkbox > i {
 }
 
 .actor.prop {
-  background-color: #000;
-}
-
-.actor.prop.board {
-    background: url('./assets/img/lpc_house_insides/board1_32x69.png');
-    background-size: 100% 100%
+  background-color: transparent;
+  background-size: 100% 100%
 }
 
 .actor.tree {
