--- a/web/styles.css
+++ b/web/styles.css
@@ -186,7 +186,8 @@ nav > button.active > .checkbox > i {
   top: -20%;
   width: 100%;
   height: 20%;
-  background-color: rgba(0,0,0, 0.7);
+  background-image: url('./assets/img/lpc_house_insides/wall1_128x105.png');
+  background-size: 20% 100%;
 }
 
 
@@ -255,33 +256,37 @@ nav > button.active > .checkbox > i {
   background-color: transparent;
 }
 .actor.door::before {
-  position: absolute;
-  content: "EXIT";
-  text-align: center;
-  box-align: border-box;
-  padding-top: 2px;
-  display: block;
-  left: -3px;
-  top: -500%;
-  width: 100%;
-  height: 550%;
-  background-color: rgba(255,255,100, 1.0);
-  transition: transform ease-out 0.25s, background-color 0.25s;
-  border: solid 3px rgba(0,0,0,1);
-}
-.actor.door.active::before {
-  transform: scale(1.5);
-  background-color: rgba(255,255,180, 1);
+    position: absolute;
+    content: "";
+    text-align: center;
+    box-align: border-box;
+    padding-top: 2px;
+    display: block;
+    top: -500%;
+    width: 100%;
+    height: 550%;
+    background-color: rgba(255,255,100, 1.0);
+    background-size: 100% 100%;
+    transition: transform ease-out 0.25s, background-color 0.25s;
 }
 .actor.door::after {
-  position: absolute;
-  content: "";
-  display: block;
-  left: 0;
-  bottom: -500%;
-  width: 100%;
-  height: 550%;
-  background: linear-gradient( rgba(255, 255, 100, 0.2), rgba(0, 0, 0, 0) );
+    position: absolute;
+    content: "";
+    text-align: center;
+    box-align: border-box;
+    padding-top: 2px;
+    display: block;
+    top: -500%;
+    width: 100%;
+    height: 550%;
+    background-image: url('./assets/img/lpc_house_insides/door_32x48.png');
+    background-size: 100% 100%;
+    transition: transform ease-out 0.25s, background-color 0.25s;
+    transform-origin: left;
+}
+.actor.door.active::after {
+    transform: rotateY(45deg);
+    background-color: rgba(255,255,180, 1);
 }
 
 .actor.pawn {
